compiler/error/tests/src/a.waso
struct Vector2D {
  i32 x
  i32 y
}
